# aria2-rs

./: Cargo.toml  README.md
examples/: batch_client.rs  normal_client.rs
src/: call.rs  client.rs  error.rs  lib.rs  options.rs  status.rs
